# openenclave

cmake/: add_enclave_executable.cmake  add_enclave_test.cmake  compiler_settings.cmake  target_make_enclave.cmake
common/: asn1.c  cert.c  datetime.c  qeidentity.c  quote.c  rand.asm  rand.s  report.c  revocation.c  safecrt.c  sgxcertextensions.c  tcbinfo.c
enclave/: asn1.c  cert.c  cmac.c  crl.c  ec.c  key.c  qeidinfo.c  random.c  report.c  revocationinfo.c  rsa.c  sha.c
enclave/core/: CMakeLists.txt  backtrace.c  calls.c  cpuid.c  globals.c  keys.c  report.c  tracee.c
host/: CMakeLists.txt  calls.c  create.c  elf.c  files.c  gen_repo_config_header.sh  load.c  loadelf.c  loadpe.c  ocalls.c  quote.c  repo_config_info.h  report.c  sgxload.c  sgxmeasure.c  sgxquoteprovider.c  sgxsign.c  traceh.c
host/crypto/: sha.c
host/crypto/bcrypt/: rsa.c
host/crypto/openssl/: asn1.c  cert.c  crl.c  ec.c  key.c  rsa.c
host/linux/: aesm.c
include/openenclave/: enclave.h
include/openenclave/bits/: report.h
include/openenclave/internal/: calls.h  raise.h  trace.h
libc/: CMakeLists.txt
libcxx/: CMakeLists.txt
new_platforms/: Makefile  OpenEnclave.sln
new_platforms/opteesim/Trusted/: cyres_sim.c
new_platforms/src/: oeoverintelsgx.edl  optee_common.c  sgx_common.c
new_platforms/src/Trusted/: oeenclave.vcxproj
new_platforms/tests/oetests_enclave/: OETestTA.c
new_platforms/tests/oetests_host/: OEHostTest.cpp
scripts/: install-prereqs
tests/SampleApp/SampleApp/: CMakeLists.txt
tests/VectorException/enc/: CMakeLists.txt
tests/abortStatus/enc/: CMakeLists.txt
tests/backtrace/enc/: CMakeLists.txt
tests/bigmalloc/: CMakeLists.txt
tests/bigmalloc/enc/: CMakeLists.txt
tests/cppException/enc/: enc.cpp
tests/cppException/host/: host.cpp
tests/create-errors/enc/: CMakeLists.txt
tests/create-rapid/enc/: CMakeLists.txt
tests/crypto/: rdrand_test.c
tests/crypto/host/: CMakeLists.txt
tests/crypto_crls_cert_chains/enc/: CMakeLists.txt
tests/debug-mode/: CMakeLists.txt
tests/debug-mode/enc/: CMakeLists.txt
tests/ecall/enc/: CMakeLists.txt
tests/ecall_ocall/host/: host.cpp
tests/libcxx/: CMakeLists.txt
tests/props/: CMakeLists.txt
tests/props/enc/: CMakeLists.txt
tools/oesign/: main.c
(+45 files in other folders)
